--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,13 @@
         android:theme="@style/Theme.First_Project"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".item_singlerec"
+            android:name=".Activity.restaurent_clicked"
             android:exported="false" />
         <activity
-            android:name=".SplashScreen"
+            android:name=".Activity.item_singlerec"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,8 +28,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:name=".Activity.MainActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
